feat: Complete Sprint 1 implementation with React frontend integration
✨ Features:
- Add React 18 frontend with TypeScript and Vite
- Implement Tailwind CSS v4 with modern syntax
- Add comprehensive authentication system with Google OAuth
- Create user profile management with extended fields
- Add protected routes and authentication context
- Implement responsive UI with modern design

🔧 Technical improvements:
- Add Go embed for serving React frontend from backend
- Update build system with frontend integration
- Add development scripts for full-stack workflow
- Fix static file serving with proper routing
- Update Node.js to v22.16.0 for compatibility
- Add comprehensive API testing capabilities

📦 New components:
- Authentication pages (Login, Profile)
- Protected route wrapper
- Navigation bar with auth state
- Homepage with feature showcase
- Auth service with token management

🗄️ Database:
- Extend user profiles with additional fields
- Add proper migrations for user data

🚀 Ready for Sprint 2: User Profiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,15 @@ services:
       timeout: 5s
       retries: 5
 
+  adminer:
+    image: adminer:4.8.1
+    container_name: jointrip_adminer
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+
 volumes:
   postgres_data:
     driver: local
